--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@
   --background-footer: #2f303a;
   --color-black: #000000;
   --color-icon: #afb1b8;
+  --border-line: #eeeeee;
 }
 
 body {
@@ -45,7 +46,7 @@ ol {
   padding-right: 15px;
   align-items: center;
 
-  outline: 2px solid coral;
+  /* outline: 2px solid coral; */
 }
 
 .substrate {
@@ -468,9 +469,9 @@ ol {
 
 .card-content {
   padding: 20px 24px;
-  border-left: 1px solid #eeeeee;
-  border-right: 1px solid #eeeeee;
-  border-bottom: 1px solid #eeeeee;
+  border-left: 1px solid var(--border-line);
+  border-right: 1px solid var(--border-line);
+  border-bottom: 1px solid var(--border-line);
 }
 
 .objects .title {
