--- a/css/styles.css
+++ b/css/styles.css
@@ -411,10 +411,12 @@ ol {
   background-color: var(--button-background-color);
 }
 
-.filter .illuminated:hover,
-.filter .illuminated:focus {
+.illuminated:hover,
+.illuminated:focus {
   color: var(--text-title-button-color);
   background-color: var(--button-hover-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 /* ========================OBJECTS ========================*/
@@ -434,7 +436,8 @@ ol {
   margin-bottom: 30px;
 }
 
-.objects-box:hover {
+.objects .link:hover,
+.objects .link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
