--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,10 @@ ol {
   margin: 0;
   padding: 0;
 }
+
+a {
+  display: block;
+}
 /* ======================== general ========================*/
 
 .container {
@@ -46,7 +50,7 @@ ol {
   padding-right: 15px;
   align-items: center;
 
-  /* outline: 2px solid coral; */
+  outline: 2px solid coral;
 }
 
 /* ======================== HEADER ========================*/
@@ -113,6 +117,7 @@ ol {
 
 .auth .nav {
   display: flex;
+  align-items: center;
 }
 
 .icons-contact:hover .icons-header,
@@ -199,7 +204,7 @@ ol {
   padding-top: 94px;
 }
 
-.back-feature {
+.desc .back-feature {
   width: 270px;
   height: 120px;
   margin-bottom: 30px;
@@ -214,7 +219,8 @@ ol {
   justify-content: center;
   align-items: center;
   margin: auto;
-  margin-top: 25px;
+  padding-top: 25px;
+  padding-bottom: 25px;
 }
 
 .feature-list {
@@ -259,6 +265,8 @@ ol {
 
 .picture-box {
   margin: 15px;
+  width: 370px;
+  height: 294px;
 }
 
 .section-title {
@@ -291,8 +299,7 @@ ol {
 }
 
 .team-text {
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding: 30px 32px;
 }
 
 .team .name {
@@ -309,7 +316,7 @@ ol {
   text-align: center;
   color: var(--paragraph-color);
   margin-top: 0px;
-  margin-bottom: 0px;
+  margin-bottom: 16px;
 }
 
 .team-icon {
@@ -318,9 +325,8 @@ ol {
 
 .icon-group {
   margin-right: -10px;
-  padding-right: 32px;
-  padding-left: 32px;
-  padding-bottom: 30px;
+  width: 206px;
+  height: 44px;
 }
 
 .icon-box {
@@ -330,16 +336,24 @@ ol {
   width: 44px;
   height: 44px;
   border-radius: 50%;
+}
+
+.socials {
+  width: 44px;
+  height: 44px;
+}
+
+.socials:not(:last-child) {
   margin-right: 10px;
 }
 
-.socials:hover .icon-box,
-.socials:focus .icon-box {
+.icon-box:hover,
+.icon-box:focus {
   background-color: var(--button-hover-color);
 }
 
-.socials:hover .team-icon,
-.socials:focus .team-icon {
+.icon-box:hover .team-icon,
+.icon-box:focus .team-icon {
   fill: var(--text-title-button-color);
 }
 
@@ -363,12 +377,17 @@ ol {
   fill: var(--color-icon);
 }
 
+.icon-website {
+  width: 170px;
+  height: 90px;
+}
+
 .icon-website:not(:last-child) {
   margin-right: 30px;
 }
 
-.icon-website:hover .regular-clients,
-.icon-website:focus .regular-clients {
+.regular-clients:hover,
+.regular-clients:focus {
   fill: var(--button-hover-color);
   border-color: var(--button-hover-color);
 }
@@ -500,12 +519,15 @@ ol {
   display: flex;
 }
 
+.footer-left {
+  margin-right: 70px;
+}
+
 .footer-address {
   display: block;
   font-style: normal;
   line-height: 1.71;
   margin-top: 20px;
-  margin-right: 70px;
   width: 231px;
   height: 81px;
 }
@@ -540,15 +562,13 @@ ol {
 
 /* ========================JOIN ========================*/
 
-.footer-join .icon-group {
-  padding-left: 0px;
+.footer-join {
 }
 
 .join-title {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
-  /* text-align: center; */
   margin-top: 0px;
   margin-bottom: 20px;
   text-transform: uppercase;
