--- a/css/styles.css
+++ b/css/styles.css
@@ -58,6 +58,7 @@ a {
 .hat {
   display: flex;
   align-items: center;
+  border-bottom: 1px solid #ececec;
 }
 
 .logo {
@@ -153,6 +154,8 @@ a {
   padding-bottom: 200px;
   max-width: 1600px;
   height: 600px;
+  background-position: cover;
+  background-color: var(--background-footer);
   background-image: linear-gradient(
       to right,
       rgba(47, 48, 58, 0.4),
@@ -204,23 +207,15 @@ a {
   padding-top: 94px;
 }
 
-.desc .back-feature {
+.icon-feature {
+  display: flex;
   width: 270px;
   height: 120px;
-  margin-bottom: 30px;
   border-radius: 4px;
-  background-color: var(--button-background-color);
-}
-
-.icon-feature {
-  width: 70px;
-  height: 70px;
-  display: flex;
   justify-content: center;
   align-items: center;
-  margin: auto;
-  padding-top: 25px;
-  padding-bottom: 25px;
+  margin-bottom: 30px;
+  background-color: var(--button-background-color);
 }
 
 .feature-list {
@@ -266,7 +261,6 @@ a {
 .picture-box {
   margin: 15px;
   width: 370px;
-  height: 294px;
 }
 
 .section-title {
@@ -325,15 +319,14 @@ a {
 
 .icon-group {
   width: 206px;
-  height: 44px;
 }
 
 .icon-box {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 44px;
-  height: 44px;
+  width: 100%;
+  height: 100%;
   border-radius: 50%;
 }
 
@@ -394,19 +387,26 @@ a {
 /* ========================PAGE PORTFILIO ========================*/
 /* ========================FILTER ===========================*/
 
+.main-portfolio {
+  padding-top: 94px;
+}
+
 .filter {
   padding-left: 280px;
-  padding-top: 94px;
-  padding-bottom: 16px;
+  margin-bottom: 34px;
   min-width: 611px;
 }
 
-.content::before {
+/* .content::after {
   content: "";
   display: block;
   height: 1px;
   background-color: #ececec;
   margin: auto;
+} */
+
+.gallery {
+  margin-bottom: 16px;
 }
 
 .gallery:not(:last-child) {
@@ -440,7 +440,6 @@ a {
 /* ========================OBJECTS ========================*/
 
 .objects {
-  padding-top: 34px;
   padding-bottom: 94px;
   display: flex;
   flex-wrap: wrap;
@@ -452,6 +451,7 @@ a {
   width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
+  border: 1px solid var(--border-line);
 }
 
 .objects .link:hover,
@@ -483,9 +483,6 @@ a {
 
 .card-content {
   padding: 20px 24px;
-  border-left: 1px solid var(--border-line);
-  border-right: 1px solid var(--border-line);
-  border-bottom: 1px solid var(--border-line);
 }
 
 .objects .title {
@@ -524,12 +521,9 @@ a {
 }
 
 .footer-address {
-  display: block;
   font-style: normal;
   line-height: 1.71;
   margin-top: 20px;
-  width: 231px;
-  height: 81px;
 }
 
 .address {
