--- a/css/styles.css
+++ b/css/styles.css
@@ -117,6 +117,7 @@ a {
 
 .auth {
   margin-left: auto;
+  align-items: center;
 }
 
 .auth .nav {
@@ -364,8 +365,8 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 170px;
-  height: 90px;
+  width: 100%;
+  height: 100%;
   border: 1px solid var(--color-icon);
   border-radius: 4px;
   cursor: pointer;
